--- a/package.json
+++ b/package.json
@@ -14,9 +14,13 @@
     "@types/react-dom": "18.2.4",
     "antd": "^5.4.7",
     "autoprefixer": "10.4.14",
+    "axios": "^1.4.0",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.1",
+    "mybatis": "^0.0.1",
+    "mybatis-mapper": "^0.6.8",
     "next": "13.4.1",
+    "numeral-es6": "^1.0.0",
     "pg": "^8.10.0",
     "postcss": "8.4.23",
     "react": "18.2.0",
